Added Mac filtering. New swagger api endpojnts
